# spotify-personalized-daily-drive

./: .gitignore  LICENSE  README.md  auth.py  config.yaml  logger.py  pyproject.toml  requirements.txt
.github/workflows/: schedule.yml  tests.yml
spotify-daily-drive/: Dockerfile  README.md  app.py  auth.py  config.py  logger.py  ml_recommender.py  playlist_manager.py  scheduler.py
src/daily_drive/: config.py  main.py
src/daily_drive/core/: auth.py  logging.py
src/daily_drive/models/: album.py  artist.py  podcast.py  track.py  user.py
src/services/: playlist_service.py  podcast_service.py  user_service.py
src/utils/: formatter.py
tests/: test_formatter.py  test_playlist_service.py  test_podcast_service.py  test_user_service.py
